--- a/data/gcm-session.desktop.in
+++ b/data/gcm-session.desktop.in
@@ -2,7 +2,7 @@
 _Name=Load device color profiles
 _Comment=Applies device profile settings at session startup
 Icon=gnome-color-manager
-Exec=gcm-apply --login
+Exec=gcm-session --login
 Terminal=false
 Type=Application
 Categories=
