--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,4 +1,4 @@
-data/gcm-apply.desktop.in
+data/gcm-session.desktop.in
 data/gcm-import.desktop.in
 data/gcm-prefs.desktop.in
 data/gcm-viewer.desktop.in
@@ -8,9 +8,7 @@ data/org.gnome.settings-daemon.plugins.color.gschema.xml
 libcolor-glib/gcm-debug.c
 libcolor-glib/gcm-profile.c
 libcolor-glib/gcm-sensor-client.c
-policy/org.gnome.color.policy.in
 src/cc-color-panel.c
-src/gcm-apply.c
 src/gcm-calibrate-argyll.c
 src/gcm-calibrate.c
 src/gcm-calibrate-dialog.c
