Re-enable the re-profiling notifications now colord supports modified

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -119,7 +119,7 @@ bin_PROGRAMS =						\
 if HAVE_EXIV
 libexec_PROGRAMS = gcm-helper-exiv
 gcm_helper_exiv_SOURCES = gcm-helper-exiv.cpp
-gcm_helper_exiv_LDADD = $(EXIV_LIBS)
+gcm_helper_exiv_LDADD = $(EXIV_LIBS) $(GLIB_LIBS)
 gcm_helper_exiv_CXXFLAGS = -Wall
 endif
 
