Remove the gtk-doc support
We don't want people to use this library; it's gone in 3.2...

--- a/Makefile.am
+++ b/Makefile.am
@@ -44,7 +44,7 @@ EXTRA_DIST =						\
 	config.h
 
 DISTCHECK_CONFIGURE_FLAGS = 				\
-	--enable-gtk-doc --disable-tests
+	--disable-tests
 
 distclean-local:
 	if test $(srdcir) = .; then :; else \
