Do not install a control panel pane
Instead ship a gcm-prefs binary (again...) as apparently the control center maintainers
want to remove the shared library in 3.2.

What a complete waste of time.

--- a/data/gcm-prefs.desktop.in
+++ b/data/gcm-prefs.desktop.in
@@ -1,8 +1,8 @@
 [Desktop Entry]
-_Name=Color
+_Name=Color Management
 _Comment=Manage ICC color profiles
 Icon=gnome-color-manager
-Exec=gnome-control-center color
+Exec=gcm-prefs
 Terminal=false
 Type=Application
 Categories=Settings;X-GNOME-SystemSettings;X-GNOME-Settings-Panel;
@@ -10,4 +10,3 @@ StartupNotify=true
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-color-manager
 X-GNOME-Bugzilla-Component=gnome-color-manager
-X-GNOME-Settings-Panel=color
