trivial: fix make distcheck

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -8,7 +8,7 @@ data/org.gnome.settings-daemon.plugins.color.gschema.xml
 src/gcm-debug.c
 src/gcm-profile.c
 src/gcm-sensor-client.c
-src/cc-color-panel.c
+src/gcm-prefs.c
 src/gcm-calibrate-argyll.c
 src/gcm-calibrate.c
 src/gcm-calibrate-dialog.c
