--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -9,7 +9,7 @@ Release:   0.#BUILD#%{?alphatag}%{?dist}
 License:   GPLv2+
 Group:     Applications/System
 URL:       http://projects.gnome.org/gnome-color-manager/
-Source0:   http://download.gnome.org/sources/gnome-color-manager/2.91/%{name}-%{version}-%{?alphatag}.tar.bz2
+Source0:   http://download.gnome.org/sources/gnome-color-manager/2.91/%{name}-%{version}.tar.gz
 
 Requires:  color-filesystem >= 1-7
 Requires:  gnome-icon-theme
