trivial: remove 95-gcm-devices.rules, nothing uses it

--- a/rules/Makefile.am
+++ b/rules/Makefile.am
@@ -1,7 +1,6 @@
 udevrulesdir = $(slashlibdir)/udev/rules.d
 udevrules_DATA =						\
-	95-gcm-colorimeters.rules				\
-	95-gcm-devices.rules
+	95-gcm-colorimeters.rules
 
 EXTRA_DIST =							\
 	$(udevrules_DATA)
