--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,7 @@
 data/gcm-session.desktop.in
 data/gcm-import.desktop.in
 data/gcm-prefs.desktop.in
+data/gcm-picker.desktop.in
 data/gcm-viewer.desktop.in
 data/gcm-viewer.ui
 data/org.gnome.color-manager.gschema.xml
