Do not try to calculate the error in gcm-picker if the values are invalid

--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -83,6 +83,7 @@ gtk-update-icon-cache %{_datadir}/icons/hicolor &> /dev/null || :
 %defattr(-,root,root,-)
 %doc AUTHORS COPYING NEWS README
 %{_bindir}/gcm-*
+%{_libexecdir}/gcm-helper-exiv
 %dir %{_datadir}/gnome-color-manager
 %{_datadir}/gnome-color-manager/gcm-*.ui
 %dir %{_datadir}/gnome-color-manager/targets
