--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -35,6 +35,8 @@ BuildRequires: libcanberra-devel
 BuildRequires: libnotify-devel >= 0.7.0
 BuildRequires: glib2-devel >= 2.25.9-2
 BuildRequires: docbook-utils
+BuildRequires: libmash-devel
+BuildRequires: clutter-gtk-devel
 
 %description
 gnome-color-manager is a session framework that makes it easy to manage, install
