--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -38,6 +38,9 @@ BuildRequires: docbook-utils
 BuildRequires: libmash-devel
 BuildRequires: clutter-gtk-devel
 
+# GNOME and KDE have different session policy agents
+Provides: color-policy-agent
+
 %description
 gnome-color-manager is a session framework that makes it easy to manage, install
 and generate color profiles in the GNOME desktop.
