trivial: remove the Management suffix in the UI

--- a/data/gcm-prefs.desktop.in
+++ b/data/gcm-prefs.desktop.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
-_Name=Color Management
-_Comment=Manage ICC color profiles
+_Name=Color
+_Comment=Manage color profiles
 Icon=gnome-color-manager
 Exec=gcm-prefs
 Terminal=false
