Remove the preferences window and replace it with a calibration wizard
The UI panel has moved to gnome-control-center, and so we don't need to
duplicate the UI here.

--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -62,7 +62,7 @@ make %{?_smp_mflags}
 %install
 make install DESTDIR=$RPM_BUILD_ROOT
 
-for i in gcm-prefs gcm-import ; do
+for i in gcm-calibrate gcm-import ; do
   desktop-file-install --delete-original                                \
     --dir=$RPM_BUILD_ROOT%{_datadir}/applications/                      \
     $RPM_BUILD_ROOT%{_datadir}/applications/$i.desktop
