--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,29 +1,24 @@
-data/gcm-session.desktop.in
+data/gcm-calibrate.desktop.in
 data/gcm-import.desktop.in
-data/gcm-prefs.desktop.in
 data/gcm-picker.desktop.in
+data/gcm-session.desktop.in
 data/gcm-viewer.desktop.in
 data/gcm-viewer.ui
-data/org.gnome.color-manager.gschema.xml
-data/org.gnome.settings-daemon.plugins.color.gschema.xml
-src/gcm-debug.c
-src/gcm-profile.c
-src/gcm-prefs.c
 src/gcm-calibrate-argyll.c
 src/gcm-calibrate.c
-src/gcm-calibrate-dialog.c
-src/gcm-calibrate-manual.c
+src/gcm-calibrate-main.c
 src/gcm-calibrate-native.c
 src/gcm-cell-renderer-profile-date.c
 src/gcm-cell-renderer-profile-text.c
-src/gcm-list-store-profiles.c
+src/gcm-debug.c
 src/gcm-import.c
 src/gcm-inspect.c
+src/gcm-list-store-profiles.c
 src/gcm-picker.c
+src/gcm-prefs.c
+src/gcm-profile.c
 src/gcm-session.c
 src/gcm-utils.c
 src/gcm-viewer.c
-[type: gettext/glade]data/gcm-calibrate.ui
 [type: gettext/glade]data/gcm-picker.ui
-[type: gettext/glade]data/gcm-prefs.ui
 [type: gettext/glade]data/gcm-spawn.ui
