Remove the obsolete gnome-settings-daemon-schema, we're not actually useing it now

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -30,8 +30,7 @@ $(service_DATA): $(service_in_files) Makefile
 
 @GSETTINGS_RULES@
 gsettings_SCHEMAS =					\
-	org.gnome.color-manager.gschema.xml		\
-	org.gnome.settings-daemon.plugins.color.gschema.xml
+	org.gnome.color-manager.gschema.xml
 
 pkgdata_DATA =						\
 	gcm-calibrate.ui				\
