trivial: fix the gcm-calibrate desktop file to reflect reality

--- a/data/gcm-calibrate.desktop.in
+++ b/data/gcm-calibrate.desktop.in
@@ -1,12 +1,13 @@
 [Desktop Entry]
 _Name=Color
-_Comment=Manage color profiles
+_Comment=Color Calibration
 Icon=gnome-color-manager
-Exec=gcm-prefs
+Exec=gcm-calibrate
 Terminal=false
 Type=Application
-Categories=Settings;X-GNOME-SystemSettings;X-GNOME-Settings-Panel;
+Categories=Settings;
 StartupNotify=true
+NoDisplay=true
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-color-manager
 X-GNOME-Bugzilla-Component=gnome-color-manager
