--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,7 +2,7 @@ data/gcm-calibrate.desktop.in
 data/gcm-import.desktop.in
 data/gcm-picker.desktop.in
 data/gcm-viewer.desktop.in
-data/gcm-viewer.ui
+[type: gettext/glade]data/gcm-viewer.ui
 src/gcm-calibrate-argyll.c
 src/gcm-calibrate.c
 src/gcm-calibrate-main.c
