Add a calibrate attach image for the 'i1 Display 3' sensor device

--- a/data/figures/Makefile.am
+++ b/data/figures/Makefile.am
@@ -19,6 +19,7 @@ icons_DATA = 	 			\
 	dtp94-attach.svg		\
 	hcfr-attach.svg			\
 	spyder-attach.svg		\
+	i1-display3-attach.svg		\
 	munki-ambient.svg		\
 	munki-attach.svg		\
 	munki-calibrate.svg		\
