Ship some pregenerated ti1 files, there's no need to make the user do this

--- a/configure.ac
+++ b/configure.ac
@@ -229,6 +229,7 @@ data/icons/scalable/Makefile
 data/tests/Makefile
 data/targets/Makefile
 data/figures/Makefile
+data/ti1/Makefile
 man/Makefile
 po/Makefile.in
 src/Makefile
